# athlete_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
athlete_api/: config.py  data_loader.py  database.ini  main.py  models.py  services.py  utils.py
data/: regions_clean.csv
tests/: test_main.py
