[tool.poetry]
name = "athlete-api"
version = "0.1.0"
description = "API to query athletes/countries in Olympics"
authors = ["Kevin George <kevin.george@tum.de>"]
repository = "https://github.com/kevingeother/athlete-api"
readme = "README.md"
packages = [{include = "athlete_api"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

psycopg2 = "2.9.6"
sqlmodel = "0.0.8"
# sqlalchemy = "1.4.41"

fastapi = "0.97.0"
uvicorn = "0.22.0"
httpx = "0.24.1"

# [tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
requests = "2.31.0"

[build-system]
requires = ["poetry-core==1.5.1"]
build-backend = "poetry.core.masonry.api"
